# tensorrt-laboratory

./: .bazelrc  .clang-format  .dockerignore  .gitignore  .gitmodules  CLA  CMakeLists.txt  CREDITS.md  Dockerfile  Dockerfile.bazel  Dockerfile.cmake  LICENSE  Makefile  README.md  WORKSPACE  build.sh  devel.bazel.sh  devel.sh  jupyter_notebook_config.py  requirements.txt
examples/: CMakeLists.txt
examples/00_TensorRT/: CMakeLists.txt  README.md  infer.cc  inference.cc
examples/01_Basic_GRPC/: CMakeLists.txt
examples/01_Basic_GRPC/protos/: simple.proto
examples/01_Basic_GRPC/src/: async_client.cc  client.cpp  server.cpp
examples/02_TensorRT_GRPC/: CMakeLists.txt  README.md
examples/02_TensorRT_GRPC/protos/: dataset.proto  inference.proto
examples/02_TensorRT_GRPC/src/: async-client.cc  metrics.cc  metrics.h  server.cc  siege.cc  sync-client.cc
examples/03_Batching/: CMakeLists.txt  README.md  echo-server.cc  inference-batcher.cc  launch_batching.sh  simple_batching_client.py  simple_pb2.py  simple_pb2_grpc.py  streaming-service.cc  unary_client.py
examples/03_Internals/: README.md
examples/04_Middleman/: CMakeLists.txt  middleman-client.cc
examples/10_Internals/: CMakeLists.txt  README.md  internals.cc
examples/11_Protos/: CMakeLists.txt
examples/11_Protos/demo/: CMakeLists.txt  dataset.proto  inference.proto
examples/11_Protos/echo/: CMakeLists.txt  echo.proto
examples/11_Protos/inference/: CMakeLists.txt  api.proto  model_config.proto  nvidia_inference.proto  request_status.proto  server_status.proto
examples/12_ConfigGenerator/: CMakeLists.txt  README.md  generator.cc  link.sh  ms_mgmt  test.py  trtis_config_gen
examples/12_FlatBuffers/: CMakeLists.txt  client.cc  example.grpc.fb.cc  example.grpc.fb.h  example_generated.h  server.cc
examples/30_PyTensorRT/: CMakeLists.txt  README.md  client.py  compute.cc  compute.py  infer_test_utils.py  inference.cc  inference.py  rebuild.sh  server.py
examples/90_Kubernetes/: README.md  bootstrap-minikube.sh  bootstrap.sh  prometheus-settings.yml  yais-deploy.yml
examples/90_Kubernetes/deploy/: build-and-run.sh
examples/90_Kubernetes/devel/: README.md  attis-devel.yml  yais-devel.yml
examples/90_Kubernetes/istio/: README.md  bootstrap.sh  istio-v0.8-minikube.yml
examples/90_Kubernetes/minikube/: README.md  bootstrap.sh
examples/90_Kubernetes/prometheus/: bootstrap.sh  custom-settings.yml  nv-inference-prom.yml  yais-dashboard.json  yais-metrics.yml
examples/91_Prometheus/: README.md  scrape-attis.conf  scrape.conf
examples/97_SingleProcessMultiSteam/: launch_service.sh
examples/98_MPS/: README.md  run_latency_test  run_throughput_test
examples/98_MultiProcessSingleStream/: README.md  run_latency_test  run_throughput_test  setup.py
examples/99_LoadBalancer/: README.md  lb-envoy.j2  run_loadbalancer.py
examples/Deployment/: CMakeLists.txt  README.md  batcher.cc
examples/Deployment/ImageClient/: CMakeLists.txt  api.proto  client.cc  client.h  client.py  envoy_config.yaml  test_client.py  test_routing.sh
examples/Deployment/ObjectStore/: README.md  create_buckets.py  get_rook_s3_keys.sh  ingress-istio.yml  ingress-nginx.yml  rook-s3.yml
examples/Deployment/RouteRequests/: CMakeLists.txt  README.md  envoy_config.yaml  test_client.py  test_routing.sh  test_service.cc
examples/ONNX/resnet50/: README.md  build.py  calibration_images.csv  calibrator.py  fetch.sh  imagenet_labels.py  int8.py  open_source_images.md5  resnet50.md5  run_jpeg_test.py  run_onnx_tests.py
examples/mlperf/: CMakeLists.txt  README.md  main.cc  trace_generator.h
examples/nvRPC/: CMakeLists.txt
examples/nvRPC/BidirectionalService/: client.cc  server.cc
examples/nvRPC/SharedMemoryService/: CMakeLists.txt  README.md  client.cc  server.cc
examples/nvRPC/StreamingInOrderSendRecv/: CMakeLists.txt  client.cc  server.cc  test.sh
examples/nvRPC/StreamingService/: CMakeLists.txt  README.md  client.cc  common.h  even-odds.cc  ping-pong.cc  server.cc  test.sh
examples/nvRPC/UnaryService/: CMakeLists.txt  client.cc  server.cc
tensorrt-laboratory/core/: BUILD.bazel  CMakeLists.txt
tensorrt-laboratory/core/benchmarks/: CMakeLists.txt  bench_memory.cc  bench_memory_stack.cc  bench_pool.cc  bench_thread_pool.cc
tensorrt-laboratory/core/src/: affinity.cc  thread_pool.cc  types.cc  utils.cc
tensorrt-laboratory/core/tests/: CMakeLists.txt  test_async_compute.cc  test_cyclic_allocator.cc  test_memory.cc  test_memory_stack.cc  test_pool.cc  test_thread_pool.cc  test_types.cc
tensorrt-laboratory/nvrpc/: BUILD  BUILD.bazel  CMakeLists.txt
tensorrt-laboratory/nvrpc/src/: executor.cc  server.cc
tensorrt-laboratory/nvrpc/tests/: CMakeLists.txt  test_build_client.h  test_build_server.h  test_pingpong.cc  test_pingpong.h  test_resources.cc  test_resources.h  test_server.cc  testing.proto
tensorrt-laboratory/python/: BUILD.bazel  CMakeLists.txt
tensorrt-laboratory/python/tensorrt/: CMakeLists.txt  infer.cc  utils.cc
tensorrt-playgound/core/: CMakeLists.txt
tensorrt-playground/core/: CMakeLists.txt
tensorrt-playground/core/src/: affinity.cc  (+4 more)
tensorrt-playground/cuda/: BUILD  CMakeLists.txt
tensorrt-playground/nvrpc/: BUILD  CMakeLists.txt
tests/: CMakeLists.txt  TestCyclicAllocator.cc  TestMemory.cc  TestMemoryStack.cc  TestPool.cc  TestTaskGraph.cc  TestThreadPool.cc
tests/benchmarks/: BenchPool.cc  BenchThreadPool.cc  CMakeLists.txt  main.cc
trtlab/: CMakeLists.txt
trtlab/core/: BUILD.bazel  CMakeLists.txt
trtlab/cuda/: BUILD.bazel  CMakeLists.txt
trtlab/memory/: CMakeLists.txt
trtlab/nvrpc/: BUILD.bazel  CMakeLists.txt
trtlab/pybind/: BUILD.bazel  CMakeLists.txt
trtlab/tensorrt/: BUILD  BUILD.bazel  CMakeLists.txt
trtlab/trtis/: CMakeLists.txt
yais/: CMakeLists.txt
yais/Examples/: CMakeLists.txt
yais/Tests/: CMakeLists.txt  test_affinity.cc  test_playground.cc  test_resources.cc  test_shared_pool.cc  test_unique_pool.cc
yais/YAIS/: CMakeLists.txt
yais/src/: Affinity.cc  DeviceInfo.cc  Executor.cc  Memory.cc  MemoryStack.cc  Metrics.cc  Server.cc  TensorRT.cc  ThreadPool.cc
(+607 files in other folders)
