cc_library(
    name = "core",
    srcs = glob([
        "src/**/*.cc",
        "src/**/*.h",
    ]),
    hdrs = glob(
        ["include/**/*.h"],
    ),
    deps = [
        "@com_google_glog//:glog",
        "@com_github_dcdillon_cpuaff//:cpuaff"
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)
